mac os specific fixes